--- a/sesion09selenium.html
+++ b/sesion09selenium.html
@@ -1121,9 +1121,17 @@ unzip chromedriver_linux64.zip <span class="nt">-d</span> <span class="nv">$JENK
 </td>
 <td class="content">
 <div class="paragraph">
-<p>EJERCICIO:
-- Rediseña las clases JUnit con los test de Selenium para poder lanzar los tests bien con Firefox o bien con en Chrome, sin tener que modificar el código fuente, es decir, sin tener que cambiar el driver "a mano". Dependiendo de tu diseño, tal vez puedas necesitar <a href="https://openclassrooms.com/en/courses/5661466-use-testing-in-java-to-achieve-quality-applications/6232331-label-your-tests-with-advanced-junit-annotations">categorías</a> de JUnit 4.
-- Crea dos fases en el pipeline, una para Firefox y otra para Chrome, y configura el pipeline para que se ejecuten en paralelo, usando el bloque <code>parallel</code>.</p>
+<p>EJERCICIO:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Rediseña las clases JUnit con los test de Selenium para poder lanzar los tests bien con Firefox o bien con en Chrome, sin tener que modificar el código fuente, es decir, sin tener que cambiar el driver "a mano". Dependiendo de tu diseño, tal vez puedas necesitar <a href="https://openclassrooms.com/en/courses/5661466-use-testing-in-java-to-achieve-quality-applications/6232331-label-your-tests-with-advanced-junit-annotations">categorías</a> de JUnit 4.</p>
+</li>
+<li>
+<p>Crea dos fases en el pipeline, una para Firefox y otra para Chrome, y configura el pipeline para que se ejecuten en paralelo, usando el bloque <code>parallel</code>.</p>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -1151,7 +1159,7 @@ unzip chromedriver_linux64.zip <span class="nt">-d</span> <span class="nv">$JENK
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-21 12:23:16 +0200
+Last updated 2020-05-21 12:50:27 +0200
 </div>
 </div>
 <style>
