--- a/sesion09selenium.html
+++ b/sesion09selenium.html
@@ -1267,6 +1267,25 @@ wget https://chromedriver.storage.googleapis.com/83.0.4103.39/chromedriver_linux
 </tr>
 </table>
 </div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Recuerda que en el código debes comentar las lineas donde se definen las property con las rutas de los drivers.</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>// System.setProperty("webdriver.gecko.driver", "drivers/geckodriver.exe");</pre>
+</div>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic" start="3">
 <li>
@@ -1445,7 +1464,7 @@ Cuando falla la ejecución de un test de Selenium WebDriver en modo headless, el
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-25 15:21:01 +0200
+Last updated 2020-05-25 20:33:01 +0200
 </div>
 </div>
 <style>
