--- a/index.html
+++ b/index.html
@@ -448,10 +448,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p><a href="selenium-ide-intro.html">Introduccion a Selenium</a></p>
+<p><a href="docs/selenium-ide-intro.html">Introduccion a Selenium</a></p>
 </li>
 <li>
-<p><a href="selenium-ide-ejercicios.html">Ejercicios Parte 1 - Proyecto Login</a></p>
+<p><a href="docs/selenium-ide-ejercicios.html">Ejercicios Parte 1 - Proyecto Login</a></p>
 </li>
 </ol>
 </div>
@@ -460,7 +460,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-03-18 15:08:35 +0100
+Last updated 2021-03-18 15:14:58 +0100
 </div>
 </div>
 </body>
