--- a/index.html
+++ b/index.html
@@ -453,6 +453,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="docs/selenium-ide-ejercicios.html">Ejercicios Parte 1 - Proyecto Login</a></p>
 </li>
+<li>
+<p><a href="docs/selenium-webdriver.html">Selenium WebDriver</a></p>
+</li>
 </ol>
 </div>
 </div>
@@ -460,7 +463,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-03-18 15:15:29 +0100
+Last updated 2021-03-23 12:50:29 +0100
 </div>
 </div>
 </body>
