selenium jenkins ok

--- a/index.html
+++ b/index.html
@@ -456,6 +456,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="docs/selenium-webdriver.html">Selenium WebDriver</a></p>
 </li>
+<li>
+<p><a href="docs/selenium-jenkins.html">Selenium en Jenkins</a></p>
+</li>
 </ol>
 </div>
 </div>
@@ -463,7 +466,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-03-23 12:50:29 +0100
+Last updated 2021-04-29 13:02:55 +0200
 </div>
 </div>
 </body>
